--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 
 <b>Teaching</b>
 <table cellpadding="4" cellspacing="0" width="600">
+<tr valign="top"><td> <a href="./signalsandsystems/2015/index.html">Signals and Systems (EEET 3041)</a>. University of South Australia. 2015. </td></tr>
 <tr valign="top"><td> <a href="./signalsandsystems/index.html">Signals and Systems (EEET 3041)</a>. University of South Australia. 2014. </td></tr>
 <tr valign="top"><td> <a href="./signalsandsystems/2013/tobeindex.html">Signals and Systems (EEET 3041)</a>. University of South Australia. 2013. </td></tr>
 <tr valign="top"><td> Modern Communication Systems (EEET 4036). University of South Australia. 2012. </td></tr>
@@ -74,22 +75,10 @@ R.&nbsp;G. McKilliam.
 <tr valign="top">
 <td>[<?php echo $Frefcounter; $Frefcounter = $Frefcounter+1;?>]</td>
 <td>
-A.&nbsp;Akhlaq, R.&nbsp;G.&nbsp;McKilliam, and R.&nbsp;Subramanian.
- Basis construction for range estimation by phase unwrapping.
- <em>IEEE Signal Process. Letters</em>, 22(11):2152-2156, Nov 2015.
-[&nbsp;<a href="robby_bib.html#Akhlaqbasisconstruction2015">bib</a>&nbsp;| 
-<a href="http://dx.doi.org/10.1109/LSP.2015.2465153">doi</a>&nbsp;|&nbsp;<a href="https://github.com/robbymckilliam/basis_construction_for_range_estimation">code</a>&nbsp;]
-</td>
-</tr>
-
-<tr valign="top">
-<td>[<?php echo $Frefcounter; $Frefcounter = $Frefcounter+1;?>]</td>
-<td>
 R.&nbsp;G.&nbsp;McKilliam, A.&nbsp;Grant, and I.&nbsp;V.&nbsp;L. Clarkson.
  Finding a closest point in a lattice of Voronoi's first kind. <em>SIAM Journal on Discrete Mathematics</em>, 28(3):1405-1422, 2014.
 [&nbsp;<a href="robby_bib.html#McKilliam_closest_point_lattice_first_kind_2014">bib</a>&nbsp;| 
 <a href="http://dx.doi.org/10.1137/140952806">doi</a>&nbsp;]
-</td>
 </tr>
 
 <tr valign="top">
@@ -515,7 +504,7 @@ The lattice <em>A</em><sub>n</sub>* and applications to synchronisation. <em>Aus
 <b>Software</b>
 <table cellpadding="4" cellspacing="0" width="600">
 <tr valign="top"><td>
-Next to many of the papers listed above is a link named `code'.  This links to a repository containing the latex file and the software used for running simulations and generating plots relevant to that paper.  All of the software is released under the <a href="http://matt.might.net/articles/crapl/">CRAPL</a> and comes with no guarantee as to legibility, coding style or anything else.  I recommend <a href="http://abandonmatlab.wordpress.com/">this blog</a>.<!-- Much of the code is Java, some Mathematica, some Ruby, some Python. Recently I have been using <a href="http://www.scala-lang.org/">Scala</a>.  My oppinion of MATLAB is well represented by <a href="http://abandonmatlab.wordpress.com/">this website</a>. -->
+Next to many of the papers listed above is a link named `code'.  This links to a repository containing the latex file and the software used for running simulations and generating plots relevant to that paper.  All of the software is released under the <a href="http://matt.might.net/articles/crapl/">CRAPL</a> and comes with no guarantee as to legibility, coding style or anything else.  I used to recommend <a href="http://abandonmatlab.wordpress.com/">this blog</a>.  Unfortunately, it's now so controversial that its owner made it private! <!-- Much of the code is Java, some Mathematica, some Ruby, some Python. Recently I have been using <a href="http://www.scala-lang.org/">Scala</a>.  My oppinion of MATLAB is well represented by <a href="http://abandonmatlab.wordpress.com/">this website</a>. -->
 </td></tr>
 </table>
 
