--- a/howyouroll/index.html
+++ b/howyouroll/index.html
@@ -2,14 +2,16 @@
 <html>
 <body>
 
-    <p>Example: ?12with4d4+4||2d8+1d6+2||2d12+1d6</p>
-
 <script>
 
 var urlinput = window.location.search.substring(1);
 process_requirements(urlinput);
 
 function process_requirements(inputstring) {
+    if( urlinput.length == 0 ) {
+	document.write("Example: ?12with4d4+4or2d8+1d6+2or2d12+1d6");
+	return;
+    }
     var isplit = inputstring.split("with");
     var required = isplit[0];
     var rolls = isplit[1];
@@ -23,9 +25,9 @@ function process_requirements(inputstring) {
     }
 }
 
-// Computes probability of each rolls, best roll
+// Computes probability of each roll, return best roll
 function process_all_dice_rolls(inputstring, required) {
-    var rolls = inputstring.split("||");
+    var rolls = inputstring.split("or");
     var bestroll = "";
     var bestprob = -1;
     for(var i in rolls) {
@@ -70,12 +72,12 @@ function process_dice(inputstring) {
     var dice = inputstring.split("d");
     var num_rolls = dice[0]; //number of rolls
     // if not "dD" component then assume D=1
-    // e.e is 4d6+1 interpretted as 4d6+1d1
-    var dice_type = 1;
+    // eg  4d6+1 interpretted as 4d6+1d1
+    var dice_type = "1";
     if( dice.length > 1 ) {
 	dice_type = dice[1]; // type of dice
     }
-    var dprob = diceProbability(dice_type);
+    var dprob = modifiedDiceProbability(dice_type);
     var prob = [1.0];
     for(var i = 0; i < num_rolls; i++) {
 	prob = conv(prob,dprob);
@@ -104,14 +106,82 @@ function conv(x,y) {
     return ret;
 }
 
+// process dice modifications (dogslicer for example)
+// this are included by adding the notation
+// 1d6m1>3
+// meaning replace 1d6 with 1's replaced by 3's.
+function modifiedDiceProbability(inputstring) {
+    var dice = inputstring.split("m");
+    var dice_type = dice[0];
+    var prob = standardDiceProbability(dice_type);
+    if( dice.length == 1 )  return prob;
+    probmod = modifyDice(prob, dice[1]);
+    return probmod;
+}
+
+function modifyDice(prob, modifier) {
+    var dice = modifier.split("to");
+    var a = dice[0];
+    var b = dice[1];
+    prob[b] = prob[a] + prob[b];
+    prob[a] = 0.0;
+    return prob;
+}
+
 // pmf of an n sided dice (returned as array)
-function diceProbability(n) {
+function standardDiceProbability(n) {
     var prob = [0.0];
     for(var p = 0; p < n; p++){
 	prob.push(1.0/n);
     }
     return prob;
 }
+
+function test_modifyDice() {
+    //document.write("<br><br>modifyDice test running<br>");
+    var prob1 = modifyDice([0,0.5,0.5], "1to2");
+    if( prob1[0] != 0 ) document.write("<br>modifyDice test FAILED!<br>");
+    if( prob1[1] != 0 ) document.write("modifyDice test FAILED!<br>");
+    if( prob1[2] != 1 ) document.write("modifyDice test FAILED!<br>");
+}
+
+function test_modifiedDiceProbability() {
+    var prob = modifiedDiceProbability("2");
+    if( prob[0] != 0 ) document.write("<br>modifyDice test FAILED!<br>");
+    if( prob[1] != 0.5 ) document.write("modifyDice test FAILED!<br>");
+    if( prob[2] != 0.5 ) document.write("modifyDice test FAILED!<br>");    
+
+    var prob = modifiedDiceProbability("2m1to2");
+    if( prob[0] != 0 ) document.write("<br>modifyDice test FAILED!<br>");
+    if( prob[1] != 0 ) document.write("modifyDice test FAILED!<br>");
+    if( prob[2] != 1 ) document.write("modifyDice test FAILED!<br>");    
+}
+
+function test_process_dice() {
+    var failstring = "<br>process dice failed";
+    var prob = process_dice("1d2");
+    if( prob[0] != 0 ) document.write(failstring);
+    if( prob[1] != 0.5 ) document.write(failstring);
+    if( prob[2] != 0.5 ) document.write(failstring);    
+
+    var prob = process_dice("1d2m1to2");
+    if( prob[0] != 0 ) document.write(failstring);
+    if( prob[1] != 0 ) document.write(failstring);
+    if( prob[2] != 1 ) document.write(failstring);
+
+    var prob = process_dice("2d2m1to2");
+    if( prob[0] != 0 ) document.write(failstring);
+    if( prob[1] != 0 ) document.write(failstring);
+    if( prob[2] != 0 ) document.write(failstring);    
+    if( prob[3] != 0 ) document.write(failstring);    
+    if( prob[4] != 1 ) document.write(failstring);    
+
+}
+
+// run a bunch of tests to finish off
+test_modifyDice();
+test_modifiedDiceProbability();
+test_process_dice();
 
 </script>
 
