--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 <table cellpadding="0" cellspacing="0" width="800">
 	<tr>
 		<td valign="top" width="380"><span class="nfakPe">
-Robby McKilliam is at the Institute for Telecommunications Research at the University of South Australia, Adelaide. His fields of interest are number theory, estimation theory, statistical signal processing and communications. He admires Lamport's structured proofs and is a fan of reproducible research.  In December 2010 he completed his PhD at the University of Queensland, Brisbane, Australia. In 2006 he completed  undergraduate studies in computer systems engineering and mathematics at the University of Queensland. Robby's recreational interests are: swimming, skiing, math, motorbikes, videogames, wine, beer and coffee.
-		<!--<p> <a href="cv.pdf">A copy of my current cv is here.</a> </p> -->
+Robby McKilliam completed undergraduate studies in computer systems engineering and mathematics at the University of Queensland, Brisbane, Australia 
+and obtained his PhD in Electrical Engineering at the University of Queensland in 2010. From 2011 to 2016 he worked as a Research Fellow and 
+later Senior Research Fellow at the University of South Australia's Institute for Telecommunications Research. He currently works at Myriota Pty. Ltd. designing the worlds 
+most reliable and cost efficient narrowband satellite communication system. His technical fields of interest are estimation theory, statistical signal processing, 
+communications, and computational number theory. He admires Lamport's structured proofs and is a fan of test driven development and reproducible research.
+<!--<p> <a href="cv.pdf">A copy of my current cv is here.</a> </p> -->
 		<p> <b>Address</b>
 		<br> Institute for Telecommunications Research
 		<br> Building W, University of South Australia, 
