Updated address information.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ most reliable and cost efficient narrowband satellite communication system. His 
 communications, and computational number theory. He admires Lamport's structured proofs and is a fan of test driven development and reproducible research.
 <!--<p> <a href="cv.pdf">A copy of my current cv is here.</a> </p> -->
 		<p> <b>Address</b>
-		<br> Institute for Telecommunications Research
-		<br> Building W, University of South Australia, 
-		<br> Mawson Lakes, SA, Australia, 5095 </p>
-		<p> <b>Email</b> robby.mckilliam_at_unisa.edu.au</p>
+		<br> Myriota Pty. Ltd.
+		<br> 25 Chesser St, 
+		<br> Adelaide, SA, Australia, 5000 </p>
+		<p> <b>Email</b> robby.mckilliam_at_myriota.com</p>
 		<p>&nbsp;
 		<!--<p> <it>
 		</td>-->
